hphp/test/zend/good/Zend/tests/traits/language008b.php.expectf
Hello World!Hello World!
Fatal error: Call to private MyClass::sayHelloWorld() from invalid context in %s/language008b.php on line 21
